Fixed scrolling issue on  devices while using css parallax

--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300" type="text/css">
 </head>
 <body>
-  <div class="body paralax">
+  <div class="body">
     <header>
       <div class="header-title"><a href=""><span>DYLΛN LΛRSEN</span></a></div>
       <div class="header-navigation"><a href=""><span class="selected">Home</span></a><a href=""><span>About</span></a><a href=""><span>Portfolio</span></a><a href=""><span class="button">Contact Me</span></a></div>
     </header>
-    <div class="intro-section paralax-group">
-      <div class="intro-background paralax-layer paralax-background">
+    <div class="intro-section parallax-parent">
+      <div class="intro-background">
         <div class="darken-20"></div>
       </div>
-      <div class="intro-title paralax-layer paralax-foreground">
+      <div class="intro-title">
         <div class="intro-text">
           <h3>DYLΛN LΛRSEN</h3>
           <h1>I do everything computers.</h1>
         </div>
       </div>
     </div>
-    <div class="about-section paralax-group"></div>
-    <div class="placeholder paralax-group"></div>
-    <footer class="paralax-group">
-      <div class="footer-content">
-        <p>© Dylan Larsen, 2016</p>
-      </div>
-    </footer>
+    <div class="about-section"></div>
+    <div class="placeholder"></div>
+    <!--footer.paralax-group-->
+    <!--    .footer-content-->
+    <!--        p © Dylan Larsen, 2016-->
   </div>
   <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" src="js/script.min.js"></script>
