Changed header to nav

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="body">
-    <header>
+    <nav>
       <div class="header-title"><a href=""><span>DYLΛN LΛRSEN</span></a></div>
       <div class="header-navigation"><a href=""><span class="selected">Home</span></a><a href=""><span>About</span></a><a href=""><span>Portfolio</span></a><a href=""><span class="button">Contact Me</span></a></div>
-    </header>
+    </nav>
     <div class="intro-section parallax-parent">
       <div class="intro-background">
         <div class="darken-20"></div>
