Updated intro text positioning

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="intro-title">
         <div class="intro-text">
           <h3>DYLΛN LΛRSEN</h3>
-          <h1>I do everything computers.</h1>
+          <h1>Lorem ipsum, dolor sit amet.</h1>
         </div>
       </div>
     </div>
