--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="body">
     <nav>
       <div class="header-title"><a href=""><span>DYLΛN LΛRSEN</span></a></div>
-      <div class="header-navigation"><a href="#intro"><span class="selected">Home</span></a><a href="#about"><span>About</span></a><a href="#portfolio"><span>Portfolio</span></a><a href="#contact"><span class="button">Contact Me</span></a></div>
+      <div class="header-navigation"><a href="#intro" id="intro-nav" class="selected"><span>Home</span></a><a href="#about" id="about-nav"><span>About</span></a><a href="#portfolio" id="portfolio-nav"><span>Portfolio</span></a><a href="#contact" id="contact-nav" class="button"><span>Contact Me</span></a></div>
     </nav>
     <div id="intro" class="intro-section parallax-parent">
       <div class="intro-background">
@@ -25,7 +25,11 @@
         </div>
       </div>
     </div>
-    <div id="about" class="about-section"></div>
+    <div id="about" class="about-section">
+      <div class="about-content">
+        <div class="about-image"><img src="./images/profile.jpg" class="profile-image"></div>
+      </div>
+    </div>
     <div class="placeholder"></div>
     <!--footer.paralax-group-->
     <!--    .footer-content-->
