--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       </div>
     </div>
     <div id="about" class="about-section">
+      <div class="about-title"></div>
+      <h1>About</h1>
       <div class="about-content">
-        <div class="about-image"><img src="./images/profile.jpg" class="profile-image"></div>
+        <div class="about-image"><img src="./images/profile.jpg" class="profile-image"></div><span class="text">Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra.</span>
       </div>
     </div>
     <div class="placeholder"></div>
