--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,300,500&amp;subset=greek" type="text/css">
 </head>
 <body>
-  <div class="body">
-    <nav>
-      <div class="header-title"><a href=""><span>DYLΛN LΛRSEN</span></a></div>
-      <div class="header-navigation"><a href="#intro" id="intro-nav" class="selected"><span>Home</span></a><a href="#about" id="about-nav"><span>About</span></a><a href="#images" id="images-nav"><span>Photos</span></a><a href="#films" id="films-nav"><span>Films</span></a><a href="#contact" id="contact-nav" class="button"><span>Contact Me</span></a></div>
-    </nav>
-    <div id="intro" class="intro-section parallax-parent">
-      <div id="intro-parallax" style="background-image: url('./images/intro-background-1440.jpg')" class="intro-background parallax">
-        <div class="darken-30"></div>
-      </div>
-      <div class="intro-title">
-        <div class="intro-text">
-          <h3>DYLΛN LΛRSEN</h3>
-          <h1>Lorem ipsum, dolor sit amet.</h1>
-        </div>
+  <nav>
+    <div class="header-title"><a href=""><span>DYLΛN LΛRSEN</span></a></div>
+    <div class="header-navigation"><a href="#intro" id="intro-nav" class="selected"><span>Home</span></a><a href="#about" id="about-nav"><span>About</span></a><a href="#images" id="images-nav"><span>Photos</span></a><a href="#films" id="films-nav"><span>Films</span></a><a href="#contact" id="contact-nav" class="button"><span>Contact Me</span></a></div>
+  </nav>
+  <div id="intro" class="intro-section parallax-parent">
+    <div id="intro-parallax" style="background-image: url('./images/intro-background-1440.jpg')" class="intro-background parallax">
+      <div class="darken-30"></div>
+    </div>
+    <div class="intro-title">
+      <div class="intro-text">
+        <h3>DYLΛN LΛRSEN</h3>
+        <h1>Lorem ipsum, dolor sit amet.</h1>
       </div>
     </div>
-    <div id="about" class="about-section">
-      <div class="about-title">
-        <h1>About</h1>
-      </div>
-      <div class="about-content">
-        <div class="about-image"><img src="./images/profile.jpg" class="profile-image"></div><span class="text">Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.</span>
-      </div>
-    </div>
-    <div id="images" class="parallax-parent">
-      <div class="heading-section">
-        <div id="images-parallax" style="background-image: url('./images/images-background-1440.jpg')" class="heading-background parallax">
-          <div class="darken-20"></div>
-        </div>
-        <div class="heading-title">
-          <div class="heading-text">
-            <h1>Photos</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="placeholder"></div>
-    <!--footer.paralax-group-->
-    <!--    .footer-content-->
-    <!--        p © Dylan Larsen, 2016-->
   </div>
+  <div id="about" class="about-section">
+    <div class="about-title">
+      <h1>About</h1>
+    </div>
+    <div class="about-content">
+      <div class="about-image"><img src="./images/profile.jpg" class="profile-image"></div><span class="text">Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.</span>
+    </div>
+  </div>
+  <div id="images" class="parallax-parent">
+    <div class="heading-section">
+      <div id="images-parallax" style="background-image: url('./images/images-background-1440.jpg')" class="heading-background parallax">
+        <div class="darken-20"></div>
+      </div>
+      <div class="heading-title">
+        <div class="heading-text">
+          <h1>Photos</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="placeholder"></div>
+  <footer>
+    <div class="footer-content">
+      <p>© Dylan Larsen, 2016</p>
+    </div>
+  </footer>
   <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.11.4.min.js"></script>
   <script type="text/javascript" src="js/script.min.js"></script>
