Started image grid

--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
         </div>
       </div>
     </div>
+    <div class="content-section">
+      <div class="grid">
+        <ul>
+          <li><img src="./images/images-background-1440.jpg"></li>
+          <li><img src="./images/images-background-1440.jpg"></li>
+          <li><img src="./images/images-background-1440.jpg"></li>
+        </ul>
+        <ul>
+          <li><img src="./images/images-background-1440.jpg"></li>
+          <li><img src="./images/images-background-1440.jpg"></li>
+          <li><img src="./images/images-background-1440.jpg"></li>
+        </ul>
+      </div>
+    </div>
   </div>
   <div class="placeholder"></div>
   <footer>
