Added image grid

--- a/index.html
+++ b/index.html
@@ -45,14 +45,26 @@
     <div class="content-section">
       <div class="grid">
         <ul>
-          <li><img src="./images/images-background-1440.jpg"></li>
-          <li><img src="./images/images-background-1440.jpg"></li>
-          <li><img src="./images/images-background-1440.jpg"></li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
         </ul>
         <ul>
-          <li><img src="./images/images-background-1440.jpg"></li>
-          <li><img src="./images/images-background-1440.jpg"></li>
-          <li><img src="./images/images-background-1440.jpg"></li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
         </ul>
       </div>
     </div>
