Added films section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,44 @@
       </div>
     </div>
   </div>
+  <div id="films" class="parallax-parent">
+    <div class="heading-section">
+      <div id="films-parallax" style="background-image: url('./images/images-background-1440.jpg')" class="heading-background parallax">
+        <div class="darken-20"></div>
+      </div>
+      <div class="heading-title">
+        <div class="heading-text">
+          <h1>Films</h1>
+        </div>
+      </div>
+    </div>
+    <div class="content-section">
+      <div class="grid">
+        <ul>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+          <li>
+            <div style="background-image: url(./images/images-background-1440.jpg)" class="image"></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="placeholder"></div>
   <footer>
     <div class="footer-content">
